# AnalysisEngine

./: .gitignore  AnalysisEngine.sln  CMakeLists.txt  README.md  exit
AnalysisEngine/: AnalysisEngine.cpp  AnalysisEngine.vcxproj  AnalysisEngine.vcxproj.filters  ArmadilloSolver.cpp  ArmadilloSolver.h  CMakeLists.txt  DistributedLoad.h  EigenSolver.cpp  EigenSolver.h  Element.h  FrameMember.cpp  FrameMember.h  GeometryHelper.cpp  GeometryHelper.h  Hinge.h  Material.h  Matrix.h  MatrixHelper.cpp  MatrixHelper.h  NodalLoad.h  Node.cpp  Node.h  Piece.h  Restraint.h  Section.h  SerendipityShell.h  Shell.cpp  Shell.h  Structure.cpp  Structure.h  StructureSolver.cpp  StructureSolver.h  TimoshenkoBeam.cpp  TimoshenkoBeam.h  TrussElement.cpp  TrussMember.cpp  TrussMember.h  UtilMethods.cpp  UtilMethods.h  Vector.cpp  (+3 more)
AnalysisEngine/include/: DistributedLoad.h  Material.h  Matrix.h  NodalLoad.h  Node.h  Restraint.h  Shape.h  Structure.h  StructureSolver.h  TrussMember.h  UtilMethods.h  Vector.h  XYData.h
AnalysisEngine/plot/: elementsDrawing.gplt  rebarAreas.txt  sinx.p
AnalysisEngine/src/: FrameMember.cpp  Material.cpp  SerendipityShell.cpp  Shape.cpp  Shell.cpp  Structure.cpp  StructureSolver.cpp  TrussMember.cpp  UtilMethods.cpp  Vector.cpp  XYData.cpp
Core/include/: Element.h  Material.h  Section.h  Structure.h  StructureSolver.h  TrussMember.h
Core/src/: CMakeLists.txt  FrameMember.cpp  Material.cpp  SerendipityShell.cpp  Shell.cpp  Structure.cpp  StructureSolver.cpp  TrussMember.cpp
CoreUtils/include/: Matrix.h  Shape.h  Vector.h  XYData.h  XYPoint.h  XYZPoint.h
CoreUtils/src/: CMakeLists.txt  GeometryHelper.cpp  Shape.cpp  UtilMethods.cpp  Vector.cpp  XYData.cpp
CoreUtilsTests/src/: CMakeLists.txt  tests.cpp
EngineTests/: EngineTests.cpp  EngineTests.vcxproj  EngineTests.vcxproj.filters  pch.h
Sandbox/src/: CMakeLists.txt  sandbox.cpp
VerificationTests/src/: CMakeLists.txt  verifications.cpp
